# syanot

./: .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  README  TODO  config-syanot.h.cmake
src/: .directory  CMakeLists.txt  EasyConstituent.cpp  EasyConstituent.h  EasyDocument.cpp  EasyDocument.h  EasyForm.cpp  EasyForm.h  EasyGroup.cpp  EasyGroup.h  EasyRelation.cpp  EasyRelation.h  EasyUtterance.cpp  EasyUtterance.h  EasyXmlReader.cpp  EasyXmlReader.h  PartMatch.cpp  PartMatch.h  PassageConstituent.cpp  PassageConstituent.h  PassageDocument.cpp  PassageDocument.h  PassageGroup.cpp  PassageGroup.h  PassageRelation.cpp  PassageRelation.h  PassageToken.cpp  PassageToken.h  PassageUtterance.cpp  PassageUtterance.h  PassageWord.cpp  PassageWord.h  PassageXmlReader.cpp  PassageXmlReader.h  UtterancesPartsMapping.cpp  UtterancesPartsMapping.h  org.kde.syanot.xml  syanot.cpp  syanot.desktop  syanot.h  (+10 more)
test/: Guide.1.ph2.IR.xml  Guide.ph2.dtd  essai.easy.xml
